# nyc-taxi-predictions-2025-2

./: .gitignore  Clase12_MLFlow&Databricks.ipynb  Clase13_MLPipelines.ipynb  initial_tracking.ipynb  mlflow.db  pyproject.toml
app/: api.py
app/api/: Dockerfile  api.py  requirements.txt
app/ui/: main.py  requirements.txt
mlruns/1/models/m-e3d46f1159b34530bf33b2c827d410ba/artifacts/: MLmodel  conda.yaml
mlruns/2/models/m-0a9693dc90cd436bb94d181bb1d65685/artifacts/: MLmodel
mlruns/2/models/m-8d19ed83d978438397e93d0be50b3bab/artifacts/: MLmodel  model.pkl
mlruns/2/models/m-8f25d4e28a654ec5960e61ed44256433/artifacts/: MLmodel
mlruns/2/models/m-8ff4c6c441c94e18b0c462de6810c00e/artifacts/: MLmodel
mlruns/2/models/m-ee437c5237fa405f9adf5b94dbbac748/artifacts/: MLmodel
notebooks/: initial_tracking.ipynb  mlflow.db
notebooks/experiments/: challenger-experiments.ipynb
notebooks/mlruns/1/models/m-18144fdac23a421886a52d86e3f1bced/artifacts/: MLmodel  model.pkl
notebooks/mlruns/1/models/m-76953318953c4711ba08fa4af3c86a60/artifacts/: MLmodel  conda.yaml
notebooks/mlruns/1/models/m-8553db04d2ee44ed9ae0a34e00903ff3/artifacts/: MLmodel
notebooks/mlruns/2/b74ba998fb4348adb5cde521b6063829/artifacts/preprocessor/: preprocessor.b
notebooks/mlruns/2/models/m-0c7f4be6e94b4cf0b7d9037d6a122812/artifacts/: MLmodel
notebooks/mlruns/2/models/m-0d48dbade78d44ceb24fea59dc8da58e/artifacts/: MLmodel
notebooks/mlruns/2/models/m-2d6d687fbc114d2b80a3ec7fa8a0164f/artifacts/: MLmodel  model.pkl
training pipeline/: 02-train_pipeline_prefect.py  train_challenger.py
(+12 files in other folders)
