[project]
name = "nyc-taxi-predictions-2025-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "fastparquet>=2024.11.0",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.1",
    "pandas>=2.3.3",
    "prefect>=3.4.25",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
]
